fix: 회원가입 닉네임
