# server/config/swagger-output.json
@@ -20,13 +20,18 @@
             "description": "OK"
           }
         }
-      },
+      }
+    },
+    "/login": {
       "post": {
         "description": "",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         },
         "requestBody": {
@@ -53,11 +58,11 @@
         "description": "",
         "parameters": [],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         },
         "requestBody": {
@@ -72,7 +77,7 @@
                   "name": {
                     "example": "any"
                   },
-                  "nickName": {
+                  "nickname": {
                     "example": "any"
                   },
                   "password": {
@@ -84,6 +89,15 @@
                 }
               }
             }
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
