# server/models/user.js
@@ -19,7 +19,7 @@ module.exports = class User extends Sequelize.Model {
                 type: Sequelize.STRING(10),
                 allowNull: false,
             },
-            nickName:{
+            nickname:{
                 type: Sequelize.TEXT,
                 allowNull: true,
                 unique: true,
